kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service-api
  labels:
    name: identity-service-api
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
