kube/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: identity-service-api
spec:
  egress:
    - {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-external
      ports:
        - port: 8443
          protocol: TCP
  podSelector:
    matchLabels:
      name: identity-service-api
  policyTypes:
    - Ingress
    - Egress
